--- a/kp_portafolio/angular.json
+++ b/kp_portafolio/angular.json
@@ -26,10 +26,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              
               "node_modules/file-saver/dist/FileSaver.min.js"
             ]
           },
