--- a/kp_portafolio/package.json
+++ b/kp_portafolio/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.1.0",
     "@types/file-saver": "^2.0.7",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "file-saver": "^2.0.5",
     "ngx-filesaver": "^17.0.0",
     "rxjs": "~7.8.0",
